resolved the extra padding... getting closer

--- a/src/App.css
+++ b/src/App.css
@@ -102,12 +102,10 @@ a {
   width: 100%;
   background-repeat: no-repeat;
   background-position: center;
-  background-attachment: fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  box-sizing: border-box;
 }
 
 .linkNoDecoration {
